fix: dark mode color shade and alignment of header

--- a/kanban.css
+++ b/kanban.css
@@ -64,3 +64,9 @@
 .toggleTask {
   border: 1px solid rgb(247, 242, 242);
 }
+
+.Mydiv {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 30px;
+}
